# arcpay

./: .gitignore  README.md
cli/: package-lock.json  package.json
contracts/: foundry.toml
contracts/deployments/: 20260415_204253.json  20260415_204409.json  20260416_194506_PayPerCall_v2.json  20260417_011236_TipJarByHandle.json  current.json
contracts/script/: deploy.sh
contracts/src/: ArcPayHub.sol  ContentPaywall.sol  PayPerCall.sol  Subscriptions.sol  TipJar.sol  TipJarByHandle.sol  UsernameRegistry.sol
contracts/test/: ArcPay.t.sol
dashboard/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/components/: Header.tsx  RegisterModal.tsx  StatsCard.tsx  TxLink.tsx  UsernameContext.tsx
demo-video/: AGENTS.md  CLAUDE.md  DESIGN.md  HANDOFF.md  SCRIPT.md  STORYBOARD.md  build-captions.mjs  build-srt.mjs  captions.json  index.html  meta.json  narration.srt  narration.txt  transcribe-openai.mjs  transcript.json
docs/: chrome-web-store.md  next.config.mjs  package-lock.json  package.json  theme.config.tsx  tsconfig.json
extension/: README.md  content.js  manifest.json  popup.html  styles.css
landing/: .env.production  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: sync-addresses.mjs
sdk/python/: README.md  pyproject.toml  test_smoke.py
sdk/python/src/arcpay/: __init__.py  abis.py  client.py  networks.py
sdk/python/src/arcpay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+114 files in other folders)
